# Simple-Games

./: .gitignore  CMakeLists.txt
Arkanoid/: Arkanoid.cpp  Ball.cpp  Ball.hpp  Block.cpp  Block.hpp  CMakeLists.txt  Game.cpp  Game.hpp  MainMenu.cpp  MainMenu.hpp  resources.rc
Snake/: CMakeLists.txt  Snake.cpp
